--- a/CourseTracker.UI/Students/Views/Index.cshtml
+++ b/CourseTracker.UI/Students/Views/Index.cshtml
@@ -1,7 +1,39 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@using CourseTracker.Domain.Students
+
 @{
+
+    List<Student> students = ViewBag.Students;
+
 }
 
 <h1>Students</h1>
+
+<div class="table-responsive">
+    <table id="tblStudents" class="table table-striped">
+        <thead>
+            <tr>
+                <th>&nbsp;</th>
+                <th>Name</th>
+                <th>Program</th>
+                <th>Average</th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (Student student in students)
+            {
+                <tr>
+                    <td>@Html.ActionLink("Details", "Details", "Students", null, new { @id = student.Id })</td>
+                    <td>
+                        @string.Format("{0} {1}", student.FirstName, student.LastName)
+                    </td>
+                    <td>
+                        @student.ProgramName
+                    </td>
+                    <td>
+                        @student.GetAverage()
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+</div>
