--- a/CourseTracker.UI/Students/Views/Index.cshtml
+++ b/CourseTracker.UI/Students/Views/Index.cshtml
@@ -22,7 +22,7 @@
             @foreach (StudentListItemModel student in students)
             {
                 <tr>
-                    <td>@Html.ActionLink("Details", "Details", "Students", null, new { @id = student.Id })</td>
+                    <td>@Html.ActionLink("Details", "Details", "Students", new { @id = student.Id })</td>
                     <td>
                         @string.Format("{0} {1}", student.FirstName, student.LastName)
                     </td>
@@ -30,7 +30,7 @@
                         @student.ProgramName
                     </td>
                     <td>
-                        Put Average here.
+                        @student.Average
                     </td>
                 </tr>
             }
