--- a/CourseTracker.UI/Students/Views/Index.cshtml
+++ b/CourseTracker.UI/Students/Views/Index.cshtml
@@ -8,6 +8,12 @@
 
 <h1>Students</h1>
 
+<div class="row mrgn-bttm-md mrgn-tp-md">
+    <div class="col-md-12">
+        @Html.ActionLink("Add Student", "Detail", "Students", null, new { @class = "btn btn-primary" })
+    </div>
+</div>
+
 <div class="table-responsive">
     <table id="tblStudents" class="table table-striped">
         <thead>
