--- a/CourseTracker.UI/Students/Views/Detail.cshtml
+++ b/CourseTracker.UI/Students/Views/Detail.cshtml
@@ -39,7 +39,7 @@
 
     <div class="row mt-3">
         <div class="col-md-12">
-            @Html.ActionLink("Add Year", "Detail", "Years", null, new { @class = "btn btn-primary" })
+            @Html.ActionLink("Add Year", "Detail", "SchoolYears", null, new { @class = "btn btn-primary" })
         </div>
     </div>
     
