--- a/CourseTracker.UI/Shared/Views/_Layout.cshtml
+++ b/CourseTracker.UI/Shared/Views/_Layout.cshtml
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="~/CourseTracker.UI.styles.css" asp-append-version="true" />
 </head>
 <body>
-    <header>
+    @* <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">CourseTracker.UI</a>
@@ -29,7 +29,12 @@
                 </div>
             </div>
         </nav>
-    </header>
+    </header> *@
+    <div class="container">
+        @{
+            await Html.RenderPartialAsync("BreadCrumbs");
+        }
+    </div>
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
