--- a/CourseTracker.UI/Students/Views/Detail.cshtml
+++ b/CourseTracker.UI/Students/Views/Detail.cshtml
@@ -44,3 +44,32 @@
     </div>
     
 }
+
+<div class="table-responsive">
+    <table id="tblSchoolYears" class="table table-striped">
+        <thead>
+            <tr>
+                <th>&nbsp;</th>
+                <th>Year #</th>
+                <th>Year</th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (SchoolYearsListItemModel schoolYear in schoolYears)
+            {
+            <tr>
+                <td>
+                    @Html.ActionLink("Details", "Detail", "Students", new { @syid = schoolYear.Id })
+                    @Html.ActionLink("Delete", "Delete", "Students", new { @syid = schoolYear.Id })
+                </td>
+                <td>
+                    @schoolYear.Index
+                </td>
+                <td>
+                    @schoolYear.Year
+                </td>
+            </tr>
+            }
+        </tbody>
+    </table>
+</div>
