--- a/CourseTracker.UI/Students/Views/Detail.cshtml
+++ b/CourseTracker.UI/Students/Views/Detail.cshtml
@@ -42,41 +42,50 @@
 @if (Model.Id != null)
 {
 
-    <div class="row mt-3">
-        <div class="col-md-12">
-            @Html.ActionLink("Add Year", "Detail", "SchoolYears", null, new { @class = "btn btn-primary" })
-        </div>
-    </div>
-    
-}
+    <section class="panel panel-default mt-3">
 
-@if (Model.Id != null)
-{
-    <div class="table-responsive">
-        <table id="tblSchoolYears" class="table table-striped">
-            <thead>
-                <tr>
-                    <th>&nbsp;</th>
-                    <th>Year #</th>
-                    <th>Year</th>
-                </tr>
-            </thead>
-            <tbody>
-                @foreach (SchoolYearsListItemModel schoolYear in schoolYears)
-                {
-                <tr>
-                    <td>
-                        @Html.ActionLink("Details", "Detail", "SchoolYears", new { @syid = schoolYear.Id })
-                    </td>
-                    <td>
-                        @schoolYear.Index
-                    </td>
-                    <td>
-                        @schoolYear.Year
-                    </td>
-                </tr>
-                }
-            </tbody>
-        </table>
-    </div>
+        <div class="panel-heading">
+            <h3 class="panel-title">School Years</h3>
+        </div>
+
+        <div class="panel-body">
+
+            <div class="row mt-3">
+                <div class="col-md-12">
+                    @Html.ActionLink("Add Year", "Detail", "SchoolYears", null, new { @class = "btn btn-primary" })
+                </div>
+            </div>
+
+            <div class="table-responsive">
+                <table id="tblSchoolYears" class="table table-striped">
+                    <thead>
+                        <tr>
+                            <th>&nbsp;</th>
+                            <th>Year #</th>
+                            <th>Year</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (SchoolYearsListItemModel schoolYear in schoolYears)
+                        {
+                        <tr>
+                            <td>
+                                @Html.ActionLink("Details", "Detail", "SchoolYears", new { @syid = schoolYear.Id })
+                            </td>
+                            <td>
+                                @schoolYear.Index
+                            </td>
+                            <td>
+                                @schoolYear.Year
+                            </td>
+                        </tr>
+                        }
+                    </tbody>
+                </table>
+            </div>
+
+        </div>
+
+    </section>
+
 }
