--- a/CourseTracker.UI/Courses/Views/Detail.cshtml
+++ b/CourseTracker.UI/Courses/Views/Detail.cshtml
@@ -4,7 +4,7 @@
 
 @{
 
-    string heading = Model.Id == null ? "Add New Course" : $"Year: {Model.Name}";
+    string heading = Model.Id == null ? "Add New Course" : $"Course: {Model.Name}";
     EntityIds entityIds = ViewBag.EntityIds;
 
 }
