--- a/CourseTracker.UI/Students/Views/Detail.cshtml
+++ b/CourseTracker.UI/Students/Views/Detail.cshtml
@@ -4,7 +4,7 @@
 
 @{
 
-    string heading = Model.Id == null ? "Add New Student" : $"{Model.FirstName} {Model.LastName}";
+    string heading = Model.Id == null ? "Add New Student" : $"Student: {Model.FirstName} {Model.LastName}";
     List<SchoolYearsListItemModel> schoolYears = Model.Id == null ? null : ViewBag.SchoolYears;
 
 }
