--- a/CourseTracker.UI/Assessments/Views/Detail.cshtml
+++ b/CourseTracker.UI/Assessments/Views/Detail.cshtml
@@ -10,3 +10,33 @@
 }
 
 <h1>@heading</h1>
+
+<form>
+
+    @Html.AntiForgeryToken()
+
+    @Html.HiddenFor(x => x.Id)
+
+    @Html.EditorFor(x => x.Name, "Question", new { inputControl = Html.TextBoxFor(x => x.Name, new { @class = "form-control w-50" }) })
+
+    @Html.EditorFor(x => x.AssessmentType, "Question", new { inputControl = Html.TextBoxFor(x => x.AssessmentType, new { @class = "form-control w-50" }) })
+
+    @Html.EditorFor(x => x.Grade, "Question", new { inputControl = Html.TextBoxFor(x => x.Grade, new { @class = "form-control w-50" }) })
+
+    @Html.EditorFor(x => x.Weight, "Question", new { inputControl = Html.TextBoxFor(x => x.Weight, new { @class = "form-control w-50" }) })
+
+    <div class="mt-3">
+
+        <input type="submit" value="Save" id="btnSave" class="btn btn-primary mr-2" formaction=@Url.Action("Detail", "Assessments")
+               formmethod="post" />
+
+        @Html.ActionLink("Cancel", "Detail", "Courses", new { cid = entityIds.Course.Value.Key }, new { @class = "btn btn-secondary" })
+
+        @if (Model.Id != null)
+        {
+            @Html.ActionLink("Delete", "Delete", "Assessments", null, new { @class = "btn btn-danger" })
+        }
+
+    </div>
+
+</form>
