--- a/CourseTracker.UI/wwwroot/css/site.css
+++ b/CourseTracker.UI/wwwroot/css/site.css
@@ -20,3 +20,15 @@ html {
 body {
   margin-bottom: 60px;
 }
+
+label.required::before {
+    content: "* ";
+    color: #dc3545;
+    font-weight: 500;
+}
+
+label.required::after {
+    content: " (Required)";
+    color: #dc3545;
+    font-weight: 500;
+}
