--- a/CourseTracker.UI/Shared/Views/EditorTemplates/Question.cshtml
+++ b/CourseTracker.UI/Shared/Views/EditorTemplates/Question.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Html
+@using CourseTracker.UI.Shared.Helpers
 
 @{
 
@@ -11,8 +12,8 @@
 
 <div id="@divId" class="row form-group @divClass">
     <div class="col-md-12">
-        @* @Html.CopLabelFor(x => x) *@
-        @Html.LabelFor(x => x)
+        @Html.CourseTrackerLabelFor(x => x)
+        @* @Html.LabelFor(x => x) *@
     </div>
     <div class="col-md-12">
         @Html.ValidationMessageFor(x => x, "", new { @class = "text-danger" })
