--- a/CourseTracker.UI/Shared/Views/EditorTemplates/Question.cshtml
+++ b/CourseTracker.UI/Shared/Views/EditorTemplates/Question.cshtml
@@ -11,9 +11,8 @@
 }
 
 <div id="@divId" class="row form-group @divClass">
-    <div class="col-md-12">
+    <div class="col-md-12 fw-bold">
         @Html.CourseTrackerLabelFor(x => x)
-        @* @Html.LabelFor(x => x) *@
     </div>
     <div class="col-md-12">
         @Html.ValidationMessageFor(x => x, "", new { @class = "text-danger" })
