--- a/CourseTracker.UI/SchoolYears/Views/Detail.cshtml
+++ b/CourseTracker.UI/SchoolYears/Views/Detail.cshtml
@@ -13,6 +13,12 @@
 
 <h1>@heading</h1>
 
+<div class="row">
+    <div class="col-12 h3">
+        @Html.LabelFor(x => x.Average): @Model.Average
+    </div>
+</div>
+
 <form>
 
     @Html.AntiForgeryToken()
@@ -61,8 +67,9 @@
                     <thead>
                         <tr>
                             <th>&nbsp;</th>
-                            <th>Year #</th>
-                            <th>Year</th>
+                            <th>Name #</th>
+                            <th>Semester</th>
+                            <th>Grade</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -77,6 +84,9 @@
                                 </td>
                                 <td>
                                     @course.Semester
+                                </td>
+                                <td>
+                                    @course.Grade
                                 </td>
                             </tr>
                         }
