Display Grades and Averages

--- a/CourseTracker.UI/SchoolYears/Views/Detail.cshtml
+++ b/CourseTracker.UI/SchoolYears/Views/Detail.cshtml
@@ -15,7 +15,7 @@
 
 <div class="row">
     <div class="col-12 h3">
-        @Html.LabelFor(x => x.Average): @Model.Average
+        @Html.LabelFor(x => x.Average): @Model.Average %
     </div>
 </div>
 
@@ -86,7 +86,7 @@
                                     @course.Semester
                                 </td>
                                 <td>
-                                    @course.Grade
+                                    @course.Grade %
                                 </td>
                             </tr>
                         }
