--- a/CourseTracker.UI/Students/Views/Index.cshtml
+++ b/CourseTracker.UI/Students/Views/Index.cshtml
@@ -38,7 +38,7 @@
                         @student.ProgramName
                     </td>
                     <td>
-                        @student.Average
+                        @student.Average %
                     </td>
                 </tr>
             }
