--- a/CourseTracker.UI/Courses/Views/Detail.cshtml
+++ b/CourseTracker.UI/Courses/Views/Detail.cshtml
@@ -15,7 +15,7 @@
 
 <div class="row">
     <div class="col-12 h3">
-        @Html.LabelFor(x => x.Grade): @Model.Grade
+        @Html.LabelFor(x => x.Grade): @Model.Grade %
     </div>
 </div>
 
@@ -87,7 +87,7 @@
                                     @assessment.AssessmentType
                                 </td>
                                 <td>
-                                    @assessment.Grade
+                                    @assessment.Grade %
                                 </td>
                                 <td>
                                     @assessment.Weight
