--- a/CourseTracker.UI/Shared/Views/_Layout.cshtml
+++ b/CourseTracker.UI/Shared/Views/_Layout.cshtml
@@ -15,8 +15,8 @@
     <script>
         tinymce.init({
             selector: 'textarea#Notes',
-            plugins: '',
-            toolbar: 'undo redo | styles | bold italic | alignleft aligncenter alignright alignjustify | outdent indent',
+            plugins: 'lists',
+            toolbar: 'undo redo | styles | bold italic | bullist numlist | outdent indent',
             menubar: '',
             tinycomments_mode: 'embedded',
             tinycomments_author: 'Author name',
