--- a/CourseTracker.UI/Attachments/Views/Index.cshtml
+++ b/CourseTracker.UI/Attachments/Views/Index.cshtml
@@ -6,7 +6,7 @@
 
 }
 
-<section class="panel panel-default mt-3">
+<section class="panel panel-default border p-3 mt-3">
 
     <div class="panel-heading">
         <h3 class="panel-title">Attachments</h3>
