--- a/CourseTracker.UI/Courses/Views/Detail.cshtml
+++ b/CourseTracker.UI/Courses/Views/Detail.cshtml
@@ -19,7 +19,7 @@
     </div>
 </div>
 
-<form>
+<form class="border p-3">
 
     @Html.AntiForgeryToken()
 
@@ -58,7 +58,7 @@
 @if (Model.Id != null)
 {
 
-    <section class="panel panel-default mt-3">
+    <section class="panel panel-default border p-3 mt-3">
 
         <div class="panel-heading">
             <h3 class="panel-title">Courses</h3>
