--- a/CourseTracker.UI/Assessments/Views/Detail.cshtml
+++ b/CourseTracker.UI/Assessments/Views/Detail.cshtml
@@ -37,7 +37,7 @@
             </div>
         </div>
         <div class="col-6">
-            @Html.EditorFor(x => x.Notes, "Question", new { inputControl = Html.TextAreaFor(x => x.Notes, new { @class = "form-control" }) })
+            @Html.EditorFor(x => x.Notes, "Question", new { inputControl = Html.TextAreaFor(x => x.Notes, new { @class = "form-control", rows = "9" }) })
         </div>
     </div>    
 
