--- a/CourseTracker.UI/Shared/Views/_Layout.cshtml
+++ b/CourseTracker.UI/Shared/Views/_Layout.cshtml
@@ -27,6 +27,8 @@
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/lib/magnific-popup-master/dist/jquery.magnific-popup.min.js"></script>
+    <link href="~/lib/magnific-popup-master/dist/magnific-popup.css" rel="stylesheet" />
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
