--- a/CourseTracker.UI/Students/Views/Detail.cshtml
+++ b/CourseTracker.UI/Students/Views/Detail.cshtml
@@ -41,7 +41,6 @@
 
         @if (Model.Id != null)
         {
-            @* @Html.ActionLink("Delete", "Delete", "Students", null, new { @class = "btn btn-danger confirmDelete" }) *@
             <a class="btn btn-danger confirmDelete" href="#modalContainer" data-id="@Model.Id">Delete</a>
         }
 
@@ -101,5 +100,13 @@
         </div>
 
     </section>
+
+    <script type="text/javascript">
+
+        var deleteUri = "/Students/Delete";
+
+    </script>
+
+    <script src="~/js/confirmdelete.js"></script>
 
 }
